// Users App

Table Base {
  // Abstract
  updated_at timestamp
  created_at timestamp
  available bool
}

Table User {
  // @tyronejose
  id uuid [pk]
  username varchar
  email varchar [unique]
  role varchar
}

Table Playlist {
  id uuid [pk]
  user_id uuid
  Content_id uuid
  watched bool
}

Ref: Playlist.user_id < User.id
Ref: Playlist.Content_id < Content.id


Table Score {
  // 8.711 (scored by 1,308,475 users)
  id uuid [pk]
  name varchar(255)
}

// Contents App

Table Content {
  // ONE PIECE
  id uuid [pk]
  title_eng varchar(255) [unique]
  title_jpn varchar(255) [unique]
  image image [not null]
  synopsis text
  type_id FK
  episodes int
  status bool
  aired date
  licensor_id FK
  studio_id FK
  source_id FK
  genre_id FK
  duration varchar(20)
  ranking_id FK
  premiered_id FK
  release_date int
  url_id FK
}

Ref: Content.type_id - Type.id
Ref: Content.licensor_id < Licensor.id
Ref: Content.studio_id - Studio.id
Ref: Content.source_id < Source.id
Ref: Content.genre_id < Genre.id
Ref: Content.url_id < Url.id

Table Type {
  // TV
  id uuid [pk]
  name varchar(255)
}

Table Licensor {
  // Example: Funimation, 4Kids Entertainment
  id uuid [pk]
  name varchar(255)
}

Table Studio {
  // Example: Toei Animation
  id uuid [pk]
  name_eng varchar(255)
  name_jpn varchar(255)
  established date
}

Table Genre {
  // Example: Action, Adventure, Fantasy
  id uuid [pk]
  name varchar(255)
  description text
}

Table Source {
  // Example: Manga
  id uuid [pk]
  name varchar(255)
}

Table Article {
  id uuid [pk]
  Content_id FK
  title varchar(255)
  content text
}

Ref: Article.Content_id - Content.id

Table Url {
  // Example: https://www.toei-anim.co.jp/tv/onep/
  id uuid [pk]
  url varchar(255)
  type set
}

Table Review {
  // Example: @tyronejose - Comments
  id uuid [pk]
  user_id FK
  Content_id FK
  rating set [null]
  comment text
}

Ref: Review.user_id < User.id
Ref: Review.Content_id < Content.id